<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/TranslucentStatus_Bar"
    android:orientation="vertical" >

    <com.strod.yssl.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height" />
    
    <com.strod.yssl.view.WebViewProgress
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        android:background="?attr/bgColor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="?attr/bgColor"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/details_collect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/details_collect"
            />
        <TextView
            android:id="@+id/details_praise"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/details_praise"/>
        <TextView
            android:id="@+id/details_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/details_share"/>
    </LinearLayout>
</RelativeLayout>