<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:cacheColorHint="#00000000"
    android:dividerHeight="1px"
    android:fadingEdge="none"
    android:fastScrollEnabled="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <com.strod.yssl.view.RippleView xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/personal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            ripple:rv_color="#88888888"
            ripple:rv_rippleDuration="400"
            ripple:rv_type="rectangle">

            <ImageView
                android:id="@+id/head_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                 />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/head_img"
                android:singleLine="true"
                android:textColor="?attr/fontContentColor"
                android:textSize="@dimen/font_size_fourteen"
                android:text="atangge" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_right" />
        </com.strod.yssl.view.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />


        <com.strod.yssl.view.RippleView xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/publish_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            ripple:rv_color="#88888888"
            ripple:rv_rippleDuration="400"
            ripple:rv_type="rectangle">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/account_icon"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:textColor="?attr/fontContentColor"
                android:textSize="@dimen/font_size_fourteen"
                android:text="@string/mine_publish" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_right" />
        </com.strod.yssl.view.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />


        <com.strod.yssl.view.RippleView xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/night_mode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            ripple:rv_color="#88888888"
            ripple:rv_rippleDuration="400"
            ripple:rv_type="rectangle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/account_icon"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:textColor="?attr/fontContentColor"
                android:textSize="@dimen/font_size_fourteen"
                android:text="@string/night_mode" />

            <com.strod.yssl.view.SwitchButton
                android:id="@+id/night_mode_switch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />
        </com.strod.yssl.view.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />


        <com.strod.yssl.view.RippleView xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/feed_back_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            ripple:rv_color="#88888888"
            ripple:rv_rippleDuration="400"
            ripple:rv_type="rectangle">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/account_icon"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:textColor="?attr/fontContentColor"
                android:textSize="@dimen/font_size_fourteen"
                android:text="@string/feed_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_right" />
        </com.strod.yssl.view.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />


        <com.strod.yssl.view.RippleView xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/about_our_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            ripple:rv_color="#88888888"
            ripple:rv_rippleDuration="400"
            ripple:rv_type="rectangle">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/account_icon"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:textColor="?attr/fontContentColor"
                android:textSize="@dimen/font_size_fourteen"
                android:text="@string/about_our" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_right" />
        </com.strod.yssl.view.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />


        <com.strod.yssl.view.RippleView xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            ripple:rv_color="#88888888"
            ripple:rv_rippleDuration="400"
            ripple:rv_type="rectangle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/account_icon"
                android:drawablePadding="20dp"
                android:gravity="center"
                android:textColor="?attr/fontContentColor"
                android:textSize="@dimen/font_size_fourteen"
                android:text="@string/setting" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_right" />
        </com.strod.yssl.view.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />

        <com.strod.yssl.view.RippleView xmlns:ripple="http://schemas.android.com/apk/res-auto"
            android:id="@+id/exit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            ripple:rv_color="#88888888"
            ripple:rv_rippleDuration="400"
            ripple:rv_type="rectangle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/btn_shape_background"
                android:padding="@dimen/margin_ordinary"
                android:textColor="?attr/fontContentColor"
                android:textSize="@dimen/font_size_fourteen"
                android:text="@string/exit_account" />
        </com.strod.yssl.view.RippleView>
    </LinearLayout>

</ScrollView>